--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -152,7 +152,7 @@
                                         <li th:each="ingredient : ${recipe.ingredients}"
                                             th:text="${(ingredient.getAmount() +
                                         ' ' + ingredient.uom.getDescription() +
-                                        ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar
+                                        ' - ' + ingredient.getBaseIngredient().getDescription())}">1 Teaspoon of Sugar
                                         </li>
                                     </ul>
                                 </div>
